[workspace]
members = [
    "app",
    "worker-protos/worker-protos-std",
    "worker-protos/worker-protos-enclave",
    "client",
    "substrate-api"
]

exclude = [
    "enclave"
]

[patch.crates-io]
protobuf-build  = { rev = "1c76baf642c9abc6428c94c66f4f16304c77950e", git = "https://github.com/advanca/protobuf-build.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc 			= { path = "rust-sgx-sdk/sgx_alloc" }
sgx_backtrace_sys 		= { path = "rust-sgx-sdk/sgx_backtrace_sys" }
sgx_build_helper 		= { path = "rust-sgx-sdk/sgx_build_helper" }
sgx_crypto_helper 		= { path = "rust-sgx-sdk/sgx_crypto_helper" }
sgx_demangle 			= { path = "rust-sgx-sdk/sgx_demangle" }
sgx_libc 			= { path = "rust-sgx-sdk/sgx_libc" }
sgx_tcrypto 			= { path = "rust-sgx-sdk/sgx_tcrypto" }
sgx_tprotected_fs 		= { path = "rust-sgx-sdk/sgx_tprotected_fs" }
sgx_trts 			= { path = "rust-sgx-sdk/sgx_trts" }
sgx_tse 			= { path = "rust-sgx-sdk/sgx_tse" }
sgx_tseal 			= { path = "rust-sgx-sdk/sgx_tseal" }
sgx_tstd 			= { path = "rust-sgx-sdk/sgx_tstd" }
sgx_types 			= { path = "rust-sgx-sdk/sgx_types" }
sgx_ucrypto 			= { path = "rust-sgx-sdk/sgx_ucrypto" }
sgx_unwind 			= { path = "rust-sgx-sdk/sgx_unwind" }
sgx_urts 			= { path = "rust-sgx-sdk/sgx_urts" }
