[package]
authors = ["Advanca Authors"]
build = "build.rs"
edition = "2018"
license = "GPL-3.0"
name = "advanca-worker"
version = "0.4.0"

[dependencies]
log        = "0.4"
env_logger = "0.7.1"
serde_json = "1.0"
serde_cbor = { version = "0.11.1"}
hex        = "0.4.2"
futures    = "0.3"
grpcio     = { rev = "249e21b3593a8bdd58429d2552b9ab72d6d46526", git = "https://github.com/tikv/grpc-rs.git", default-features = false, features = ["openssl", "protobuf-codec"] }
protobuf   = "=2.8.1"
structopt  = "0.3"

jsonrpsee  = { version = "0.1", features = ["ws"] }
async-std  = { version = "1" }

sp-core    = { git = "https://github.com/paritytech/substrate", rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"}
sp-keyring = { git = "https://github.com/paritytech/substrate", rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"}
sp-runtime = {rev = '00a400f82539e2f78e8ddbcd98aea512c87c5f3c', git = 'https://github.com/paritytech/substrate.git'}
# use the pinned substrate revision's primitive type version
primitive-types = "0.6.2"

sgx_types 		= { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts 		= { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal 		= { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_crypto_helper 	= { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

advanca-macros          = { rev = "a0a7f2bef6e0d371ad70a405e17d027c96279e17", git = "https://github.com/advanca/advanca-sgx-helper" }
advanca-crypto          = { rev = "a0a7f2bef6e0d371ad70a405e17d027c96279e17", git = "https://github.com/advanca/advanca-sgx-helper" }
advanca-crypto-types    = { rev = "a0a7f2bef6e0d371ad70a405e17d027c96279e17", git = "https://github.com/advanca/advanca-sgx-helper" }
sgx-ra                  = { rev = "a0a7f2bef6e0d371ad70a405e17d027c96279e17", git = "https://github.com/advanca/advanca-sgx-helper" }
advanca-runtime         = { rev = "7b5704d9deb3e9b137c4acb61ea7db3019ee1cf0", git = "https://github.com/advanca/advanca-node/" }
advanca-core            = { rev = "7b5704d9deb3e9b137c4acb61ea7db3019ee1cf0", git = "https://github.com/advanca/advanca-node/" }

aas-protos-std          = { rev = "fcbd88bdc05e892444c2dd13b2b3fecb163882b5", git = "https://github.com/advanca/advanca-attestation-service" }
worker-protos-std       = { path = "../worker-protos/worker-protos-std" }

[dependencies.codec]
package = "parity-scale-codec"
version = "1.0.0"

[dependencies.substrate-api]
path = "../substrate-api"
