[package]
authors = ["Advanca Authors"]
build = "build.rs"
edition = "2018"
license = "GPL-3.0"
name = "advanca-worker"
version = "0.4.0"

[dependencies]
log        = "0.4"
env_logger = "0.7.1"
serde_json = "1.0"
hex        = "0.4.2"
futures    = "0.3"
grpcio     = { rev = "249e21b3593a8bdd58429d2552b9ab72d6d46526", git = "https://github.com/tikv/grpc-rs.git", default-features = false, features = ["openssl", "protobuf-codec"] }
clang-sys  = "=0.28.1"
protobuf   = "=2.8.1"
structopt  = "0.3"

jsonrpsee  = { version = "0.1", features = ["ws"] }
async-std  = { version = "1" }

sp-core    = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate"}
sp-keyring = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate"}
sp-runtime = { tag = "v2.0.0-rc5+2", git = 'https://github.com/paritytech/substrate.git'}
# use the pinned substrate revision's primitive type version
primitive-types = "0.7.2"

sgx_types 		= { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts 		= { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal 		= { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_crypto_helper 	= { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

advanca-macros          = { tag = "v0.4.0", git = "https://github.com/advanca/advanca-sgx-helper" }
advanca-crypto          = { tag = "v0.4.0", git = "https://github.com/advanca/advanca-sgx-helper", features = ["std_env"] }
advanca-crypto-types    = { tag = "v0.4.0", git = "https://github.com/advanca/advanca-sgx-helper", features = ["std_env"] }
sgx-ra                  = { tag = "v0.4.0", git = "https://github.com/advanca/advanca-sgx-helper" }
advanca-node-primitives = { tag = "v0.4.0", git = "https://github.com/advanca/advanca-node/" }

#advanca-macros          = { path = "../../../advanca-sgx-helper/advanca-macros/" }
#advanca-crypto          = { path = "../../../advanca-sgx-helper/advanca-crypto/", features = ["std_env"] }
#advanca-crypto-types    = { path = "../../../advanca-sgx-helper/advanca-crypto-types/", features = ["std_env"] }
#sgx-ra                  = { path = "../../../advanca-sgx-helper/sgx-ra" }
#advanca-node-primitives = { path = "../../advanca-node/advanca-node-primitives/" }

aas-protos-std          = { tag = "v0.3.0", git = "https://github.com/advanca/advanca-attestation-service" }
worker-protos-std       = { path = "../worker-protos/worker-protos-std" }

[dependencies.codec]
package = "parity-scale-codec"
version = "1.3.0"

[dependencies.substrate-api]
path = "../substrate-api"
