[package]
authors = ["Advanca Authors"]
edition = "2018"
name = "advanca-client"
license = "GPL-3.0"
version = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio   = { rev = "249e21b3593a8bdd58429d2552b9ab72d6d46526", git = "https://github.com/tikv/grpc-rs.git", default-features = false, features = ["openssl", "protobuf-codec"] }
clang-sys = "=0.28.1"
env_logger = "0.7.0"
futures = "0.1.29"
hyper = "0.12.35"
jsonrpc-core-client = { version = "14.0.3", features = ["http", "ws"] }
log = "0.4.8"
hex = "0.4.2"
error-chain = "0.12"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1"
protobuf = "=2.8.1"
structopt = "0.3"

node-primitives = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate"}
sc-rpc          = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate"}
sp-core         = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate"}
sp-runtime      = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate"}
sp-keyring      = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate"}
node-runtime    = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate"}

sgx_crypto_helper = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types         = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_ucrypto       = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

advanca-crypto       = { rev = "c73508a4ad947c4a027679e7638589769006ec17", git = "https://github.com/advanca/advanca-sgx-helper", features = ["std_env"] }
advanca-crypto-types = { rev = "c73508a4ad947c4a027679e7638589769006ec17", git = "https://github.com/advanca/advanca-sgx-helper", features = ["std_env"] }
advanca-node-primitives = { rev = "dc13cadb1e375223c85a22c1fd404b951b6d869a", git = "https://github.com/advanca/advanca-node/" }

worker-protos-std    = { path = "../worker-protos/worker-protos-std" }

async-std = { version = "1.6.2", features = ["attributes"] }

[dependencies.substrate-subxt]
git = 'https://github.com/advanca/substrate-subxt'
rev = 'cea05ad5ecd03e649827617e5e2ae3f696f4e31b'

[dependencies.codec]
package = "parity-scale-codec"
version = "1.3.0"
