[package]
authors = ["Advanca Authors"]
edition = "2018"
name = "advanca-client"
license = "GPL-3.0"
version = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio   = { rev = "249e21b3593a8bdd58429d2552b9ab72d6d46526", git = "https://github.com/tikv/grpc-rs.git", default-features = false, features = ["openssl", "protobuf-codec"] }
clang-sys = "=0.28.1"
env_logger = "0.7.0"
futures = "0.1.29"
hyper = "0.12.35"
jsonrpc-core-client = { version = "14.0.3", features = ["http", "ws"] }
log = "0.4.8"
hex = "0.4.2"
error-chain = "0.12"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1"
protobuf = "=2.8.1"
structopt = "0.3"

node-primitives = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate"}
sc-rpc          = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate"}
sp-core         = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate"}
sp-runtime      = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate"}
sp-keyring      = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate"}
node-runtime    = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate"}

sgx_crypto_helper = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types         = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_ucrypto       = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

advanca-crypto          = { tag = "v0.4.0", git = "https://github.com/advanca/advanca-sgx-helper/", features = ["std_env"] }
advanca-crypto-types    = { tag = "v0.4.0", git = "https://github.com/advanca/advanca-sgx-helper/", features = ["std_env"] }
advanca-node-primitives = { tag = "v0.4.0", git = "https://github.com/advanca/advanca-node/" }
substrate-subxt         = { rev = "d86bad44a3281c9eb0630d8b166885200f1fa150", git = "https://github.com/advanca/substrate-subxt/" }

#advanca-crypto          = { path = "../../../advanca-sgx-helper/advanca-crypto/", features = ["std_env"] }
#advanca-crypto-types    = { path = "../../../advanca-sgx-helper/advanca-crypto-types/", features = ["std_env"] }
#advanca-node-primitives = { path = "../../advanca-node/advanca-node-primitives/" }
#substrate-subxt         = { path = "../../../substrate-subxt" }

worker-protos-std    = { path = "../worker-protos/worker-protos-std" }

async-std = { version = "1.6.2", features = ["attributes"] }

#[dependencies.substrate-subxt]
#git = 'https://github.com/advanca/substrate-subxt'
#rev = '41ef6db2f46ef9df64a627e3efc04a942def5d89'

[dependencies.codec]
package = "parity-scale-codec"
version = "1.3.0"
