[package]
authors = ["Advanca Authors"]
edition = "2018"
license = 'Apache-2.0'
name = "advanca-worker-enclave"
version = "0.4.0"

[lib]
name = "advanca_worker_enclave"
crate-type = ["staticlib"]

[features]
default = []
production = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tse       = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd      = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"] }
sgx_rand      = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts      = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types     = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal     = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto   = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tunittest = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies]
# unmodified crates
codec             = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
primitive-types   = { version = "0.7.2", default-features = false, features = ["codec"] }

# mesalock-modified crates
# NOTE: Have to ensure all the git repos have the same Cargo version
log               = { tag = "sgx_1.1.2", git = "https://github.com/mesalock-linux/log-sgx" }
env_logger        = { tag = "sgx_1.1.2", git = "https://github.com/mesalock-linux/env_logger-sgx" }
base64            = { tag = "sgx_1.1.2", git = "https://github.com/mesalock-linux/rust-base64-sgx" }
hex 		  = { tag = "sgx_1.1.2", git = "https://github.com/mesalock-linux/rust-hex-sgx"}
protobuf          = { tag = "sgx_1.1.2", git = "https://github.com/mesalock-linux/rust-protobuf-sgx.git" }
serde        	  = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_json        = { git = "https://github.com/mesalock-linux/serde-json-sgx"}
serde_derive      = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde-big-array   = { git = "https://github.com/mesalock-linux/serde-big-array-sgx" }
serde_cbor        = { git = "https://github.com/mesalock-linux/cbor-sgx" }

# customized crates
advanca-macros         = { rev = "c73508a4ad947c4a027679e7638589769006ec17", git = "https://github.com/advanca/advanca-sgx-helper" }
advanca-crypto         = { rev = "c73508a4ad947c4a027679e7638589769006ec17", git = "https://github.com/advanca/advanca-sgx-helper", features = ["sgx_enclave"] }
advanca-crypto-types   = { rev = "c73508a4ad947c4a027679e7638589769006ec17", git = "https://github.com/advanca/advanca-sgx-helper", features = ["sgx_enclave"] }
#oram                   = { tag = "v0.1.2", git = "https://github.com/advanca/oram.git", default-features = false, features = ["sgx"] }
#advanca-macros         = { path = "../../../advanca-sgx-helper/advanca-macros"}
#advanca-crypto         = { path = "../../../advanca-sgx-helper/advanca-crypto", features = ["sgx_enclave"] }
#advanca-crypto-types   = { path = "../../../advanca-sgx-helper/advanca-crypto-types", features = ["sgx_enclave"] }
oram                   = { path = "../../../oram/", default-features = false, features = ["sgx"] }
worker-protos-enclave  = { path = "../worker-protos/worker-protos-enclave" }

# rust-sgx-sdk crates
sgx_tstd          = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs"] }
sgx_types         = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_crypto_helper = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", package = "sgx_tcrypto_helper" }
sgx_rand          = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts          = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tkey_exchange = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

#[patch.'https://github.com/advanca/advanca-sgx-helper']
#advanca-crypto-types = { path = "../../advanca-sgx-helper/advanca-crypto-types" }

#[patch.'https://github.com/advanca/advanca-sgx-helper']
#advanca-macros  = { path = "../../advanca-sgx-helper/advanca-macros" }
#
[patch.crates-io]
protobuf-build  = { rev = "1c76baf642c9abc6428c94c66f4f16304c77950e", git = "https://github.com/advanca/protobuf-build.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc 			= { path = "../rust-sgx-sdk/sgx_alloc" }
sgx_backtrace_sys 		= { path = "../rust-sgx-sdk/sgx_backtrace_sys" }
sgx_build_helper 		= { path = "../rust-sgx-sdk/sgx_build_helper" }
sgx_crypto_helper 		= { path = "../rust-sgx-sdk/sgx_crypto_helper" }
sgx_demangle 			= { path = "../rust-sgx-sdk/sgx_demangle" }
sgx_libc 			= { path = "../rust-sgx-sdk/sgx_libc" }
sgx_rand 			= { path = "../rust-sgx-sdk/sgx_rand" }
sgx_serialize 			= { path = "../rust-sgx-sdk/sgx_serialize" }
sgx_tcrypto 			= { path = "../rust-sgx-sdk/sgx_tcrypto" }
sgx_tcrypto_helper 		= { path = "../rust-sgx-sdk/sgx_tcrypto_helper" }
sgx_tprotected_fs 		= { path = "../rust-sgx-sdk/sgx_tprotected_fs" }
sgx_trts 			= { path = "../rust-sgx-sdk/sgx_trts" }
sgx_tse 			= { path = "../rust-sgx-sdk/sgx_tse" }
sgx_tseal 			= { path = "../rust-sgx-sdk/sgx_tseal" }
sgx_tstd 			= { path = "../rust-sgx-sdk/sgx_tstd" }
sgx_tunittest 			= { path = "../rust-sgx-sdk/sgx_tunittest" }
sgx_types 			= { path = "../rust-sgx-sdk/sgx_types" }
sgx_unwind 			= { path = "../rust-sgx-sdk/sgx_unwind" }
