[package]
authors = ["Advanca Authors"]
edition = "2018"
license = "GPL-3.0"
name = "substrate-api"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.0"
log = "0.4.8"
hex = "0.4.2"
async-std = { version = "1.6.2", features = ["attributes"] }

sp-core         = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate" }
sp-runtime      = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate" }
pallet-balances = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate" }

advanca-node-primitives = { rev = "7d01af90ac821c61d63cacb54c6b1c32777bae2a", git = "https://github.com/advanca/advanca-node" }

[dependencies.codec]
package = "parity-scale-codec"
version = "1.3.0"

[dependencies.substrate-subxt]
git = 'https://github.com/advanca/substrate-subxt'
rev = '41ef6db2f46ef9df64a627e3efc04a942def5d89'

[dev-dependencies]
sp-keyring = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate" }
