[package]
authors = ["Advanca Authors"]
edition = "2018"
license = "GPL-3.0"
name = "substrate-api"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.0"
log = "0.4.8"
hex = "0.4.2"
async-std = { version = "1.6.2", features = ["attributes"] }

sp-core         = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate" }
sp-runtime      = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate" }
pallet-balances = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate" }

advanca-node-primitives = { rev = "eadd1462c3ea6ec816a4daba1f994d6837764258", git = "https://github.com/advanca/advanca-node/" }
substrate-subxt         = { rev = "790c2bff5b0f709d4f69f01740d35499cd403b9a", git = "https://github.com/advanca/substrate-subxt/" }

#advanca-node-primitives = { path = "../../advanca-node/advanca-node-primitives/" }
#substrate-subxt         = { path = "../../../substrate-subxt" }

[dependencies.codec]
package = "parity-scale-codec"
version = "1.3.0"

[dev-dependencies]
sp-keyring = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate" }
