[package]
authors = ["Advanca Authors"]
edition = "2018"
license = "GPL-3.0"
name = "substrate-api"
version = "0.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.0"
log = "0.4.8"
hex = "0.4.2"
async-std = { version = "1.6.3", features = ["attributes"] }

sp-core         = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate" }
sp-runtime      = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate" }
pallet-balances = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate" }

advanca-node-primitives = { tag = "v0.4.0", git = "https://github.com/advanca/advanca-node/" }
substrate-subxt         = { rev = "03b00b047a2cd13b516a48bd1bf1f5a8843ea54a", git = "https://github.com/advanca/substrate-subxt/" }
#substrate-subxt         = { rev = "d86bad44a3281c9eb0630d8b166885200f1fa150", git = "https://github.com/advanca/substrate-subxt/" }

#advanca-node-primitives = { path = "../../advanca-node/advanca-node-primitives/" }
#substrate-subxt         = { path = "../../../substrate-subxt" }

[dependencies.codec]
package = "parity-scale-codec"
version = "1.3.0"

[dev-dependencies]
sp-keyring = { tag = "v2.0.0-rc5+2", git = "https://github.com/paritytech/substrate" }
