[package]
name = "worker-protos-enclave"
version = "0.2.0"
authors = ["Advanca Authors"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf-sgx    = { package = "protobuf", tag = "sgx_1.1.2", git = "https://github.com/mesalock-linux/rust-protobuf-sgx.git" }
sgx_types       = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd        = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
protobuf        = "=2.8.1"

[build-dependencies]
protobuf-build       = { package = "protobuf-build", version = "=0.11.3", default-features = false, features = ["protobuf-codec"] }
walkdir              = "2.2"
